--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/hint"
         android:inputType="number"
-        android:lines="1"
-        android:maxLength="10" />
+        android:lines="1" />
 
 </FrameLayout>
